# uc-intg-madvr

./: Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_madvr/: __init__.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup.py
