[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-madvr"
description = "madVR Envy integration for Unfolded Circle Remote"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
keywords = [
    "unfoldedcircle",
    "integration",
    "madvr",
    "envy",
    "video-processor",
    "media-player",
    "remote-control"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "ucapi>=0.5.2",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-madvr"
"Bug Reports" = "https://github.com/mase1981/uc-intg-madvr/issues"

[tool.setuptools]
packages = ["intg_madvr"]

[tool.setuptools.dynamic]
version = {attr = "intg_madvr.__version__"}

[tool.setuptools.package-data]
"intg_madvr" = ["*.json"]

[project.scripts]
uc-intg-madvr = "intg_madvr.driver:run"